[gd_scene load_steps=56 format=3 uid="uid://d31vg3emxkypt"]

[ext_resource type="Script" uid="uid://2y8st1i23l55" path="res://baubles/baublehead.gd" id="1_1xugq"]
[ext_resource type="Texture2D" uid="uid://0iqsrpem6iqi" path="res://baubles/bauble_sprites/Bauble_Ruby.png" id="2_6cagt"]
[ext_resource type="Texture2D" uid="uid://b1iewhes2imfx" path="res://baubles/bauble_sprites/Bauble_Ruby1.png" id="2_8fvfd"]
[ext_resource type="PackedScene" uid="uid://l160kxor0r2e" path="res://components/pathfinding/pathfinding.tscn" id="2_q85ck"]
[ext_resource type="Texture2D" uid="uid://b81jxq70lq0dw" path="res://baubles/bauble_sprites/Bauble_Ruby2.png" id="3_nkxpc"]
[ext_resource type="Texture2D" uid="uid://cvgmjbp315e02" path="res://baubles/bauble_sprites/Bauble_Ruby3.png" id="4_s8h4q"]
[ext_resource type="Texture2D" uid="uid://1pwl1h32db0n" path="res://baubles/bauble_sprites/Bauble_Ruby4.png" id="5_ojerh"]
[ext_resource type="Texture2D" uid="uid://c6kbm8sd84lsk" path="res://baubles/bauble_sprites/Bauble_Ruby6.png" id="6_anyvr"]
[ext_resource type="Texture2D" uid="uid://b1rpj7hx7rfmt" path="res://baubles/bauble_sprites/Bauble_Ruby7.png" id="7_k3vvf"]
[ext_resource type="Texture2D" uid="uid://bqaj0hx1vb1fm" path="res://PixelArt/Saphire/Walking.png" id="9_p4tes"]
[ext_resource type="Texture2D" uid="uid://dtaykee0kb41n" path="res://baubles/bauble_sprites/Bauble_Topaz1.png" id="10_1nsfu"]
[ext_resource type="Texture2D" uid="uid://c0yq4x2cjr317" path="res://baubles/bauble_sprites/Bauble_Topaz2.png" id="11_ndctq"]
[ext_resource type="Texture2D" uid="uid://jkfkxqxkr6nw" path="res://baubles/bauble_sprites/Bauble_Topaz3.png" id="12_bncvx"]
[ext_resource type="Texture2D" uid="uid://dke7scl057kbm" path="res://baubles/bauble_sprites/Bauble_Topaz4.png" id="13_swha3"]
[ext_resource type="Texture2D" uid="uid://lm0b0c32fqbk" path="res://baubles/bauble_sprites/Bauble_Topaz5.png" id="14_opbr1"]
[ext_resource type="PackedScene" uid="uid://dnurpmd4urlt7" path="res://components/state_machine/state_machine.tscn" id="15_wjopr"]
[ext_resource type="Script" uid="uid://8fx8nkbmyhti" path="res://baubles/bauble_states/bauble_idle.gd" id="16_dfyra"]
[ext_resource type="Script" uid="uid://bhrdggt0womj2" path="res://baubles/bauble_states/bauble_follow.gd" id="17_7864n"]
[ext_resource type="Script" uid="uid://540tlmo2yxrt" path="res://baubles/bauble_states/bauble_patrol.gd" id="18_5bey7"]
[ext_resource type="Script" uid="uid://cpmovm7hur2uf" path="res://baubles/bauble_states/bauble_targeting.gd" id="19_wrae1"]
[ext_resource type="Script" uid="uid://dmkxjipukcamf" path="res://baubles/bauble_states/bauble_attack.gd" id="20_u7xas"]
[ext_resource type="Script" uid="uid://dty07i40qv77b" path="res://baubles/bauble_states/bauble_held.gd" id="21_u7xas"]
[ext_resource type="Script" uid="uid://bvmxl8h6x88jw" path="res://baubles/bauble_states/bauble_thrown.gd" id="22_4hj66"]
[ext_resource type="Script" uid="uid://bf8bm7473vluq" path="res://baubles/bauble_states/bauble_defend.gd" id="23_i0ibc"]
[ext_resource type="Script" uid="uid://ci7bpo5hqxep1" path="res://baubles/bauble_states/bauble_return.gd" id="24_rqomk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r32wp"]
atlas = ExtResource("2_8fvfd")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijikv"]
atlas = ExtResource("3_nkxpc")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_55rvm"]
atlas = ExtResource("4_s8h4q")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0r2o"]
atlas = ExtResource("5_ojerh")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbtb1"]
atlas = ExtResource("6_anyvr")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo4fs"]
atlas = ExtResource("7_k3vvf")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lq8f"]
atlas = ExtResource("3_nkxpc")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhd7a"]
atlas = ExtResource("2_6cagt")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2omke"]
atlas = ExtResource("6_anyvr")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbg2c"]
atlas = ExtResource("9_p4tes")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfp1f"]
atlas = ExtResource("9_p4tes")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwwb1"]
atlas = ExtResource("9_p4tes")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s035"]
atlas = ExtResource("9_p4tes")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b41uj"]
atlas = ExtResource("9_p4tes")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kxuq"]
atlas = ExtResource("10_1nsfu")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sgj2"]
atlas = ExtResource("11_ndctq")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8stv"]
atlas = ExtResource("12_bncvx")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqpnh"]
atlas = ExtResource("13_swha3")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yuy5"]
atlas = ExtResource("14_opbr1")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_tncxp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r32wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijikv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55rvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0r2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbtb1")
}],
"loop": true,
"name": &"ruby_attack",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo4fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lq8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhd7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2omke")
}],
"loop": true,
"name": &"ruby_idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r32wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijikv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55rvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0r2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbtb1")
}],
"loop": true,
"name": &"ruby_run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbg2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfp1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwwb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s035")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b41uj")
}],
"loop": true,
"name": &"sapphire_attack",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbg2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfp1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbg2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b41uj")
}],
"loop": true,
"name": &"sapphire_idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbg2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfp1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwwb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s035")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b41uj")
}],
"loop": true,
"name": &"sapphire_run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kxuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sgj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8stv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqpnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yuy5")
}],
"loop": true,
"name": &"topaz_attack",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kxuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sgj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kxuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yuy5")
}],
"loop": true,
"name": &"topaz_idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kxuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sgj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8stv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqpnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yuy5")
}],
"loop": true,
"name": &"topaz_run",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t0pkf"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3vjkq"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mgpf2"]
radius = 7.0

[sub_resource type="Animation" id="Animation_f1n71"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5n0qo"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_4vfyu"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_65cpm"]
resource_name = "sit"

[sub_resource type="Animation" id="Animation_udpbm"]
resource_name = "thrown"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_vo0e4"]
resource_name = "walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bjdru"]
_data = {
&"RESET": SubResource("Animation_f1n71"),
&"attack": SubResource("Animation_5n0qo"),
&"idle": SubResource("Animation_4vfyu"),
&"sit": SubResource("Animation_65cpm"),
&"thrown": SubResource("Animation_udpbm"),
&"walk": SubResource("Animation_vo0e4")
}

[node name="baublehead" type="CharacterBody2D" groups=["bauble"]]
z_index = 2
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_1xugq")

[node name="Pathfinding" parent="." node_paths=PackedStringArray("host") instance=ExtResource("2_q85ck")]
host = NodePath("..")
speed = 250
deceleration = 0.05

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -1)
sprite_frames = SubResource("SpriteFrames_tncxp")
animation = &"sapphire_idle"
frame_progress = 0.694651
centered = false
offset = Vector2(-7.5, -15.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t0pkf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_3vjkq")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_mgpf2")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 16.0
target_desired_distance = 8.0

[node name="TimerRange" type="Timer" parent="."]
wait_time = 10.0

[node name="TimerPathfinding" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="TimerAttackCooldown" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bjdru")
}

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("15_wjopr")]
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("16_dfyra")

[node name="Follow" type="Node2D" parent="StateMachine"]
script = ExtResource("17_7864n")

[node name="Patrol" type="Node2D" parent="StateMachine"]
script = ExtResource("18_5bey7")

[node name="Targeting" type="Node2D" parent="StateMachine"]
script = ExtResource("19_wrae1")

[node name="Attack" type="Node2D" parent="StateMachine"]
script = ExtResource("20_u7xas")

[node name="Held" type="Node2D" parent="StateMachine"]
script = ExtResource("21_u7xas")

[node name="Thrown" type="Node2D" parent="StateMachine"]
script = ExtResource("22_4hj66")

[node name="Defend" type="Node2D" parent="StateMachine"]
script = ExtResource("23_i0ibc")

[node name="Return" type="Node2D" parent="StateMachine"]
script = ExtResource("24_rqomk")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_area_2d_body_shape_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="TimerRange" to="." method="_on_timer_range_timeout"]
[connection signal="timeout" from="TimerPathfinding" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerAttackCooldown" to="." method="_on_timer_attack_cooldown_timeout"]
